@@ -206,127 +206,25 @@ It specifies the type of the MCU connected to the programmer.  These are read fr
 does not know about a part that you have, simply add it to the config
 file (be sure and submit a patch back to the author so that it can be
 incorporated for the next version).  See the sample config file for
-the format.  Currently, the following MCU types are understood:
+the format. 
+For currently supported MCU types use ? as partno, this will print a list of partno ids and official part names on the terminal. (Both can be used with the -p option.)
 .Pp
-.TS
-ll.
-\fBOption tag\fP	\fBOfficial part name\fP
-1200	AT90S1200 (****)
-2313	AT90S2313
-2333	AT90S2333
-2343	AT90S2343 (*)
-4414	AT90S4414
-4433	AT90S4433
-4434	AT90S4434
-8515	AT90S8515
-8535	AT90S8535
-c128	AT90CAN128
-c32	AT90CAN32
-c64	AT90CAN64
-m103	ATmega103
-m128	ATmega128
-m1280	ATmega1280
-m1281	ATmega1281
-m1284p	ATmega1284P
-m128rfa1	ATmega128RFA1
-m16	ATmega16
-m161	ATmega161
-m162	ATmega162
-m163	ATmega163
-m164	ATmega164
-m164p	ATmega164P
-m168	ATmega168
-m168p	ATmega168P
-m169	ATmega169
-m16u2	ATmega16U2
-m2560	ATmega2560 (**)
-m2561	ATmega2561 (**)
-m32	ATmega32
-m324p	ATmega324P
-m325	ATmega325
-m3250	ATmega3250
-m328p	ATmega328P
-m329	ATmega329
-m3290	ATmega3290
-m329p	ATmega329P
-m3290p	ATmega3290P
-m32u2	ATmega32U2
-m32u4	ATmega32U4
-m48	ATmega48
-m64	ATmega64
-m640	ATmega640
-m644p	ATmega644P
-m644	ATmega644
-m645	ATmega645
-m6450	ATmega6450
-m649	ATmega649
-m6490	ATmega6490
-m8	ATmega8
-m8515	ATmega8515
-m8535	ATmega8535
-m88	ATmega88
-m88p	ATmega88P
-m8u2	ATmega8U2
-pwm2	AT90PWM2
-pwm2b	AT90PWM2B
-pwm3	AT90PWM3
-pwm3b	AT90PWM3B
-t10	ATtiny10
-t12	ATtiny12 (***)
-t13	ATtiny13
-t15	ATtiny15
-t2313	ATtiny2313
-t25	ATtiny25
-t26	ATtiny26
-t261	ATtiny261
-t4	ATtiny4
-t4313	ATtiny4313
-t44	ATtiny44
-t45	ATtiny45
-t461	ATtiny461
-t5	ATtiny5
-t84	ATtiny84
-t85	ATtiny85
-t861	ATtiny861
-t88	ATtiny88
-t9	ATtiny9
-ucr2	AT32uca0512
-usb1286	ATmega1286
-usb1287	ATmega1287
-usb162	ATmega162
-usb646	ATmega647
-usb647	ATmega647
-usb82	ATmega82
-x128a1	ATxmega128A1
-x128a1d	ATxmega128A1revD
-x128a3	ATxmega128A3
-x128a4	ATxmega128A4
-x16a4	ATxmega16A4
-x192a1	ATxmega192A1
-x192a3	ATxmega192A3
-x256a1	ATxmega256A1
-x256a3	ATxmega256A3
-x256a3b	ATxmega256A3B
-x32a4	ATxmega32A4
-x64a1	ATxmega64A1
-x64a3	ATxmega64A3
-x64a4	ATxmega64A4
-.TE
-.Bl -tag -width "(**) "
-.It "(*)"
-The AT90S2323 and ATtiny22 use the same algorithm.
-.It "(**)"
-Flash addressing above 128 KB is not supported by all
-programming hardware.  Known to work are jtag2, stk500v2,
-and bit-bang programmers.
-.It "(***)"
-The ATtiny11 uses the same algorithm, but can only be
-programmed in high-voltage serial mode.
-.It "(****)"
+Following parts need special attention:
+.Bl -tag -width "ATmega1234"
+.It "AT90S1200"
 The ISP programming protocol of the AT90S1200 differs in subtle ways
 from that of other AVRs.  Thus, not all programmers support this
 device.  Known to work are all direct bitbang programmers, and all
 programmers talking the STK500v2 protocol.
+.It "AT90S2343"
+The AT90S2323 and ATtiny22 use the same algorithm.
+.It "ATmega2560, ATmega2561"
+Flash addressing above 128 KB is not supported by all
+programming hardware.  Known to work are jtag2, stk500v2,
+and bit-bang programmers.
+.It "ATtiny11"
+The ATtiny11 can only be
+programmed in high-voltage serial mode.
 .El
 .It Fl b Ar baudrate
 Override the RS-232 connection baud rate specified in the respective
@@ -346,7 +244,7 @@ You can use the 'default_bitclock' keyword in your
 file to assign a default value to keep from having to specify this
 option on every invocation.
 .It Fl c Ar programmer-id
-Use the pin configuration specified by the argument.  Pin
+Use the programmer specified by the argument.  Programmers and their pin
 configurations are read from the config file (see the
 .Fl C
 option).  New pin configurations can be easily added or modified
@@ -358,6 +256,8 @@ keyword in your
 .Pa ${HOME}/.avrduderc
 file to assign a default programmer to keep from having to specify
 this option on every invocation.
+A full list of all supported programmers is output to the terminal 
+by using ? as programmer-id.
 .It Fl C Ar config-file
 Use the specified config file to load configuration data.  This file
 contains all programmer and part definitions that
